--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>The Wanderers, Reunited</h1>
+				<h1>The Wanderers, Unhinged</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
