--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>The Wanderers, Unhinged</h1>
+				<h1>The Wanderers, Reunited</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
@@ -157,7 +157,7 @@
 						</div>
 						<div class="span4">
 							<div class="linediv-c">
-								<h3>$600,000</h3><p>of $3,000,000</p>
+								<h3>$600000</h3><p>of $3,000,000</p>
 							</div>
 						</div>
 						<div class="span4">
